# decoupled_dj

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
billing/: admin.py  apps.py  models.py  urls.py  views.py
billing/api/: serializers.py  views.py
billing/static/billing/js/: app.js
billing/tests/: test_api.py
billing/vue_spa/: README.md  package.json  vue.config.js
billing/vue_spa/src/: App.vue  main.js
billing/vue_spa/src/components/: InvoiceCreate.vue
blog/: models.py  urls.py
blog/api/: serializers.py  views.py
cypress/: README.md
cypress/integration/: Billing.spec.js
decoupled_dj/: urls.py
decoupled_dj/settings/: base.py  development.py  production.py
decoupled_dj/static/billing/js/: app.8f8c3f25.js  app.8f8c3f25.js.map  app.b94e7eab.js  app.b94e7eab.js.map  app.js  chunk-vendors.5f99da63.js  chunk-vendors.5f99da63.js.map  chunk-vendors.c8593c1d.js  chunk-vendors.c8593c1d.js.map  chunk-vendors.js
login/: urls.py
login/templates/login/: login.html
next-blog/: package-lock.json  package.json
next-blog/pages/posts/: [id].tsx
users/: apps.py  models.py
