[tool.poetry]
name = "decoupled-dj"
version = "0.1.0"
description = "A project for studying decoupled django architectures"
authors = ["Preston Mackert"]
license = "MIT"
readme = "README.md"
packages = [{include = "decoupled_dj"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.4"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"
djangorestframework = "^3.14.0"
django-simple-history = "^3.2.0"
django-auditlog = "^2.2.1"
django-cors-headers = "^3.13.0"
pytest = "^7.2.0"
pytest-django = "^4.5.2"
model-bakery = "^1.9.0"


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
